# Task-tracker

./: .env  alembic.ini  main.py  pyproject.toml  settings.py
database/: setup.py
database/migrations/: env.py
database/migrations/versions/: 9b4a52343035_init.py  fdf11e5dc67b_add_user_and_task.py
database/models/: __init__.py  task.py  user.py
