[tool.poetry]
name = "task tracker"
version = "0.1.0"
description = ""
authors = ["TraderXylioner <treider.xylioner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
sqlalchemy = "^2.0.34"
environs = "^11.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
